--- a/styles/style.css
+++ b/styles/style.css
@@ -45,6 +45,20 @@ input::placeholder {
     color: #ffffff; /* Change this to the desired color */
     opacity: 1; /* Optional: Ensure the color opacity is 100% */
 }
+.btn {
+    background-color: tomato; /* Button background color */
+    color: white; /* Text color */
+    padding: 10px 20px; /* Padding for the button */
+    border: none; /* Remove default border */
+    border-radius: 5px; /* Rounded corners */
+    font-size: 16px; /* Font size */
+    cursor: pointer; /* Pointer cursor on hover */
+    transition: background-color 0.3s ease; /* Smooth transition for background color */
+}
+
+.btn:hover {
+    background-color: darkred; /* Background color on hover */
+}
 
 /* navbar styles */
 nav {
@@ -88,3 +102,17 @@ nav {
 
 
 
+/* popular tours serciton */
+.populer-tours{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 3rem;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.populer-tours .text-part{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
