--- a/styles/style.css
+++ b/styles/style.css
@@ -16,8 +16,13 @@ body {
 .container {
   width: 95%;
   margin: 5rem auto;
-  border: 2px solid red;
   border-radius: 8px;
+}
+.text-center{
+  text-align: center;
+}
+.text-black{
+  color: black;
 }
 h1{
     font-size: 4rem;
@@ -97,7 +102,8 @@ nav {
   justify-content: center;
   text-align: center;
   flex-direction: column;
-  border: 2px solid red;
+  gap: 2rem;
+  padding: 2rem;
 }
 
 
@@ -118,3 +124,39 @@ nav {
 }
 
 
+
+
+/* destination  */
+.row1,.row2,.row3 {
+  display: grid;
+  grid-template-columns: .7fr 1.3fr;
+  gap: 1rem; /* Adjust the gap as needed */
+  margin: 2rem 0;
+}
+.row2{
+  grid-template-columns: .6fr 1fr .4fr;
+}
+.row3{
+  grid-template-columns: 1.3fr .7fr;
+  margin-bottom: 0;
+}
+
+.image-gallery div {
+  position: relative;
+}
+
+.image-gallery img {
+  width: 100%;
+  height: 300px;
+  display: block;
+  filter: brightness(80%);
+}
+
+.image-gallery p {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 1.5em; /* Adjust as needed */
+}
